jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: jenkins-service
  namespace: jenkins
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: jenkins
  type: ClusterIP
status:
  loadBalancer: {}
